# cmake_examples

./: .gitmodules
01_single_executable/: CMakeLists.txt
02_static_and_dynamic_library/: CMakeLists.txt  README.md  main.cpp
02_static_and_dynamic_library/libs/mathz_shared/: CMakeLists.txt  mathz.cpp
02_static_and_dynamic_library/libs/mathz_shared/include/: mathz.h  mathz_exports.h
02_static_and_dynamic_library/libs/some_static/: CMakeLists.txt  some.cpp  some.h
03_dependency_management/03_01_fetch_content_basic/: CMakeLists.txt  README.md  main.cpp
03_dependency_management/03_02_find_module_package_basic/: CMakeLists.txt  README.md  main.cpp
03_dependency_management/03_02_find_module_package_basic/cmake/: FindFoo.cmake
03_dependency_management/03_02_find_module_package_basic/foo/include/: foo.h
03_dependency_management/03_03_using_git_submodules/: CMakeLists.txt  README.md  main.cpp
04_install/04_01_install_with_cmake/: CMakeLists.txt  README.md  main.cpp
04_install/04_02_install_with_cpack/: CMakeLists.txt  LICENSE  README.md  example_config.h.in
notes/: cmake_add_executable_command.md  cmake_build_types.md  cmake_command_add_executable.md  cmake_command_add_library.md  cmake_command_add_subdirectory.md  cmake_command_include.md  cmake_command_messages.md  cmake_command_target_compile_xx.md  cmake_command_target_include_directories.md  cmake_command_target_link_libraries.md  cmake_command_target_sources.md  cmake_functions_and_macros.md  cmake_generators.md  cmake_reasonable_defaults.md  cmake_target_best_practices.md  cmake_variables.md  cmake_what_is_it.md
